--- a/Kariyer.Net_Open_Each_Application_Flow.xaml
+++ b/Kariyer.Net_Open_Each_Application_Flow.xaml
@@ -5,7 +5,7 @@
   <VisualBasic.Settings>
     <x:Null />
   </VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>854,912.6666666666666</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>883.3333333333334,912.6666666666666</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>Kariyer_Net_Open_Each_Application_Flow_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -282,7 +282,7 @@
                         <x:Boolean x:Key="IsPinned">False</x:Boolean>
                       </scg:Dictionary>
                     </sap:WorkflowViewStateService.ViewState>
-                    <If Condition="[CInt(str_Idx)&gt;76]" DisplayName="If- First Run" sap:VirtualizedContainerService.HintSize="834,8350.666666666666" sap2010:WorkflowViewState.IdRef="If_8">
+                    <If Condition="[CInt(str_Idx)&gt;76]" DisplayName="If- First Run" sap:VirtualizedContainerService.HintSize="834,7589.333333333333" sap2010:WorkflowViewState.IdRef="If_8">
                       <sap:WorkflowViewStateService.ViewState>
                         <scg:Dictionary x:TypeArguments="x:String, x:Object">
                           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -290,19 +290,19 @@
                         </scg:Dictionary>
                       </sap:WorkflowViewStateService.ViewState>
                       <If.Then>
-                        <Sequence sap:VirtualizedContainerService.HintSize="761.3333333333334,4765.333333333333" sap2010:WorkflowViewState.IdRef="Sequence_10">
+                        <Sequence sap:VirtualizedContainerService.HintSize="761.3333333333334,4004" sap2010:WorkflowViewState.IdRef="Sequence_10">
                           <sap:WorkflowViewStateService.ViewState>
                             <scg:Dictionary x:TypeArguments="x:String, x:Object">
                               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                             </scg:Dictionary>
                           </sap:WorkflowViewStateService.ViewState>
-                          <ui:BrowserScope Browser="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" UiBrowser="{x:Null}" BrowserType="Chrome" DisplayName="Attach Browser 'chrome.exe Applications'" sap:VirtualizedContainerService.HintSize="719.3333333333334,4678" sap2010:WorkflowViewState.IdRef="BrowserScope_1" InformativeScreenshot="9f3aa9836f13ee46134676963005f4a9" Selector="&lt;html app='chrome.exe' title='Applications | Kariyer.net' /&gt;">
+                          <ui:BrowserScope Browser="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" UiBrowser="{x:Null}" BrowserType="Chrome" DisplayName="Attach Browser 'chrome.exe Applications'" sap:VirtualizedContainerService.HintSize="719.3333333333334,3916.6666666666665" sap2010:WorkflowViewState.IdRef="BrowserScope_1" InformativeScreenshot="9f3aa9836f13ee46134676963005f4a9" Selector="&lt;html app='chrome.exe' title='Applications | Kariyer.net' /&gt;">
                             <ui:BrowserScope.Body>
                               <ActivityAction x:TypeArguments="x:Object">
                                 <ActivityAction.Argument>
                                   <DelegateInArgument x:TypeArguments="x:Object" Name="ContextTarget" />
                                 </ActivityAction.Argument>
-                                <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="685.3333333333334,4530.666666666667" sap2010:WorkflowViewState.IdRef="Sequence_9">
+                                <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="685.3333333333334,3769.3333333333335" sap2010:WorkflowViewState.IdRef="Sequence_9">
                                   <sap:WorkflowViewStateService.ViewState>
                                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -329,20 +329,20 @@
                                       </scg:Dictionary>
                                     </sap:WorkflowViewStateService.ViewState>
                                   </ui:LogMessage>
-                                  <ui:IfElseIf DisplayName="Else If" sap:VirtualizedContainerService.HintSize="623.3333333333334,4088" sap2010:WorkflowViewState.IdRef="IfElseIf_1">
+                                  <ui:IfElseIf DisplayName="Else If" sap:VirtualizedContainerService.HintSize="623.3333333333334,3326.6666666666665" sap2010:WorkflowViewState.IdRef="IfElseIf_1">
                                     <ui:IfElseIf.ConditionBlocks>
                                       <sc:BindingList x:TypeArguments="ui:IfElseIfBlock" AllowEdit="True" AllowNew="True" AllowRemove="True" RaiseListChangedEvents="True">
                                         <ui:IfElseIfBlock BlockType="If" Condition="[(str_Date).Trim&lt;&gt;&quot;&quot; AND (str_Date).Trim.length&gt;10]">
                                           <ui:IfElseIfBlock.Then>
-                                            <Sequence sap:VirtualizedContainerService.HintSize="572,1477.3333333333333" sap2010:WorkflowViewState.IdRef="Sequence_5">
+                                            <Sequence sap:VirtualizedContainerService.HintSize="450,716" sap2010:WorkflowViewState.IdRef="Sequence_5">
                                               <sap:WorkflowViewStateService.ViewState>
                                                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                                   <x:Boolean x:Key="IsPinned">False</x:Boolean>
                                                 </scg:Dictionary>
                                               </sap:WorkflowViewStateService.ViewState>
-                                              <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="510,144.66666666666666" sap2010:WorkflowViewState.IdRef="LogMessage_7" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;Date is not empty and date is &gt;10&quot;]" />
-                                              <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Process\Kariyer.net\DateTime_Comparision.xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="510,115.33333333333333" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_7" UnSafe="False" WorkflowFileName="Process\Kariyer.net\DateTime_Comparision.xaml">
+                                              <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="388,144.66666666666666" sap2010:WorkflowViewState.IdRef="LogMessage_7" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;Date is not empty and date is &gt;10&quot;]" />
+                                              <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Process\Kariyer.net\DateTime_Comparision.xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="388,115.33333333333333" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_7" UnSafe="False" WorkflowFileName="Process\Kariyer.net\DateTime_Comparision.xaml">
                                                 <ui:InvokeWorkflowFile.Arguments>
                                                   <InArgument x:TypeArguments="x:String" x:Key="in_str_Date1">[str_Date]</InArgument>
                                                   <InArgument x:TypeArguments="x:String" x:Key="in_str_Date2">[str_Last_Processed_Date]</InArgument>
@@ -350,7 +350,7 @@
                                                   <OutArgument x:TypeArguments="x:Boolean" x:Key="out_Bool_Is_D1_Greater_D2">[bool_Date]</OutArgument>
                                                 </ui:InvokeWorkflowFile.Arguments>
                                               </ui:InvokeWorkflowFile>
-                                              <If Condition="[bool_Date]" sap:VirtualizedContainerService.HintSize="510,1026.6666666666667" sap2010:WorkflowViewState.IdRef="If_1">
+                                              <If Condition="[bool_Date]" sap:VirtualizedContainerService.HintSize="388,265.3333333333333" sap2010:WorkflowViewState.IdRef="If_1">
                                                 <sap:WorkflowViewStateService.ViewState>
                                                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -1123,7 +1123,7 @@
                               <av:Size x:Key="ShapeSize">200,54</av:Size>
                             </scg:Dictionary>
                           </sap:WorkflowViewStateService.ViewState>
-                          <If Condition="[bool_Date]" sap:VirtualizedContainerService.HintSize="510,529.3333333333334" sap2010:WorkflowViewState.IdRef="If_25">
+                          <If Condition="[bool_Date]" sap:VirtualizedContainerService.HintSize="200,54" sap2010:WorkflowViewState.IdRef="If_25">
                             <sap:WorkflowViewStateService.ViewState>
                               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                 <x:Boolean x:Key="IsExpanded">False</x:Boolean>
@@ -1184,7 +1184,12 @@
               </sap:WorkflowViewStateService.ViewState>
               <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Page Number Search" sap:VirtualizedContainerService.HintSize="200,54" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="Process\Kariyer.net\Kariyer.Net_Page_Number_Search.xaml">
                 <ui:InvokeWorkflowFile.Arguments>
-                  <InArgument x:TypeArguments="x:String" x:Key="in_str_PageNumber">[str_PageNumber_OneTimeRun]</InArgument>
+                  <InArgument x:TypeArguments="x:String" x:Key="in_str_PageNumber">
+                    <VisualBasicValue x:TypeArguments="x:String" ExpressionText="str_PageNumber_OneTimeRun" />
+                  </InArgument>
+                  <InOutArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="io_Config">
+                    <VisualBasicReference x:TypeArguments="scg:Dictionary(x:String, x:Object)" ExpressionText="io_Config" />
+                  </InOutArgument>
                 </ui:InvokeWorkflowFile.Arguments>
               </ui:InvokeWorkflowFile>
               <FlowStep.Next>
@@ -1203,10 +1208,10 @@
                         <x:Boolean x:Key="IsPinned">False</x:Boolean>
                       </scg:Dictionary>
                     </sap:WorkflowViewStateService.ViewState>
-                    <If Condition="[CInt(str_Idx_OneTime_Run)&gt;76]" DisplayName="If- First Run" sap:VirtualizedContainerService.HintSize="962,6080" sap2010:WorkflowViewState.IdRef="If_22">
+                    <If Condition="[CInt(str_Idx_OneTime_Run)&gt;76]" DisplayName="If- First Run" sap:VirtualizedContainerService.HintSize="388,54" sap2010:WorkflowViewState.IdRef="If_22">
                       <sap:WorkflowViewStateService.ViewState>
                         <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                          <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                          <x:Boolean x:Key="IsExpanded">False</x:Boolean>
                           <x:Boolean x:Key="IsPinned">False</x:Boolean>
                         </scg:Dictionary>
                       </sap:WorkflowViewStateService.ViewState>
@@ -1934,7 +1939,7 @@
                         </Sequence>
                       </If.Else>
                     </If>
-                    <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="772,144.66666666666666" sap2010:WorkflowViewState.IdRef="LogMessage_6" Message="[str_Idx_OneTime_Run]" />
+                    <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="388,144.66666666666666" sap2010:WorkflowViewState.IdRef="LogMessage_6" Message="[str_Idx_OneTime_Run]" />
                   </Sequence>
                   <FlowStep.Next>
                     <FlowStep x:Name="__ReferenceID6">
@@ -2035,7 +2040,7 @@
                                       </scg:Dictionary>
                                     </sap:WorkflowViewStateService.ViewState>
                                   </ui:SetAsset>
-                                  <ui:SetAsset TimeoutMS="{x:Null}" AssetName="RPA_Kariyer.Net_Page_OneTime_Run" DisplayName="Set Asset" FolderPath="Shared" sap:VirtualizedContainerService.HintSize="334,197.33333333333334" sap2010:WorkflowViewState.IdRef="SetAsset_17" Value="[(CInt(str_PageNumber_OneTimeRun)+1).ToString]">
+                                  <ui:SetAsset TimeoutMS="{x:Null}" AssetName="RPA_Kariyer.Net_Page_OneTime_Run" DisplayName="Set Asset" FolderPath="Shared" sap:VirtualizedContainerService.HintSize="422.6666666666667,197.33333333333334" sap2010:WorkflowViewState.IdRef="SetAsset_17" Value="[(CInt(str_PageNumber_OneTimeRun)+1).ToString]">
                                     <sap:WorkflowViewStateService.ViewState>
                                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -2082,8 +2087,13 @@
                           </sap:WorkflowViewStateService.ViewState>
                           <ui:CommentOut sap:VirtualizedContainerService.HintSize="200,54" sap2010:WorkflowViewState.IdRef="CommentOut_3">
                             <ui:CommentOut.Body>
-                              <Sequence DisplayName="Ignored Activities" sap2010:WorkflowViewState.IdRef="Sequence_68">
-                                <Sequence sap:VirtualizedContainerService.HintSize="200,84.66666666666667" sap2010:WorkflowViewState.IdRef="Sequence_64">
+                              <Sequence DisplayName="Ignored Activities" sap:VirtualizedContainerService.HintSize="730,1748" sap2010:WorkflowViewState.IdRef="Sequence_68">
+                                <sap:WorkflowViewStateService.ViewState>
+                                  <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                                    <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                                  </scg:Dictionary>
+                                </sap:WorkflowViewStateService.ViewState>
+                                <Sequence sap:VirtualizedContainerService.HintSize="668,1637.3333333333333" sap2010:WorkflowViewState.IdRef="Sequence_64">
                                   <sap:WorkflowViewStateService.ViewState>
                                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
